src/objects/EMP_Farm_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Agri_Input_Area_Locked__c</fullName>
        <label>Agri Input Area Locked</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agri_Input_ICA_Certified__c</fullName>
        <label>Agri Input ICA Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agri_Input_Storage__c</fullName>
        <label>Agri Input Storage</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beans_To_Be_Harvested_Kg__c</fullName>
        <label>Beans To Be Harvested Kg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercialization_Registration__c</fullName>
        <label>Commercialization Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercialization_to_date__c</fullName>
        <label>Commercialization to date</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercialized_Kg__c</fullName>
        <label>Commercialized Kg</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_accomplishment_Facilities__c</fullName>
        <formula>+if(text( Agri_Input_Storage__c )=&quot;Sí&quot;,1,0)+if(text( Agri_Input_Area_Locked__c )=&quot;Sí&quot;,1,0)+if(text( Pesticide_Separated_From_Fertilizers__c )=&quot;Sí&quot;,1,0)+if(text( First_Aid_Kit__c )=&quot;Sí&quot;,1,0)+if(text( Fire_Extinguisher_Visible__c )=&quot;Sí&quot;,1,0)</formula>
        <label>Criteria accomplishment Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_accomplishment_Register__c</fullName>
        <formula>if(text(Labor_Registration__c)=&quot;Sí&quot;,1,0)+if(text( Fertilizers_Use_Registration__c )=&quot;Sí&quot;,1,0)+if(text( Pesticide_Use_Registration__c )=&quot;Sí&quot;,1,0)+if(text( Harvest_Registration__c )=&quot;Sí&quot;,1,0)+if(text( Commercialization_Registration__c)=&quot;Sí&quot;,1,0)</formula>
        <label>Criteria accomplishment Register</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_accomplishment_Soil_and_Water__c</fullName>
        <formula>+if(text( Existing_Soil_Analysis__c )=&quot;Sí&quot;,1,0)+if(text( Soil_Analysis_Interpreted_for_Fert_Plan__c )=&quot;Sí&quot;,1,0)+if(text( Soil_Conservancy_Practices__c )=&quot;Sí&quot;,1,0)+if(text( Water_Quality_Evaluated__c )=&quot;Sí&quot;,1,0)</formula>
        <label>Criteria accomplishment Soil and Water</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_accomplisment_Agrochemical__c</fullName>
        <formula>+if(text( Personal_Protection_Equipment__c )=&quot;Sí&quot;,1,0)+if(text( Input_Spill_Kit__c )=&quot;Sí&quot;,1,0)+if(text( Dose_Area_Marked__c )=&quot;Sí&quot;,1,0)+if(text( Empty_Containers_Properly_Disposed__c )=&quot;Sí&quot;,1,0)+if(text( Agri_Input_ICA_Certified__c )=&quot;Sí&quot;,1,0)</formula>
        <label>Criteria accomplisment Agrochemical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop_Area__c</fullName>
        <label>Crop Area</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop_Stage__c</fullName>
        <label>Crop Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Preparación del terreno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosecha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Destination_Sold_Product__c</fullName>
        <label>Destination Sold Product</label>
        <picklist>
            <picklistValues>
                <fullName>A clientes del mercado local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes del mercado regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes Mayoristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes Minoristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes nacionales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes extranjeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dose_Area_Marked__c</fullName>
        <label>Dose Area Marked</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Empty_Containers_Properly_Disposed__c</fullName>
        <label>Empty Containers Properly Disposed</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Soil_Analysis__c</fullName>
        <label>Existing Soil Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farm_diagnosis_and_targets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Farm diagnosis and targets</label>
        <referenceTo>EMP_Farm_Diagnostic_and_Targets__c</referenceTo>
        <relationshipLabel>EMP Farm Follow Ups</relationshipLabel>
        <relationshipName>EMP_Farm_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmer_Signature__c</fullName>
        <label>Farmer Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fertilizers_Use_Registration__c</fullName>
        <label>Fertilizers Use Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fire_Extinguisher_Visible__c</fullName>
        <label>Fire Extinguisher Visible</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Aid_Kit__c</fullName>
        <label>First Aid Kit</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Green_Dried_Beans__c</fullName>
        <label>Green Dried Beans</label>
        <picklist>
            <picklistValues>
                <fullName>Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Harvest_Registration__c</fullName>
        <label>Harvest Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Id_Productor__c</fullName>
        <label>Id Productor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Spill_Kit__c</fullName>
        <label>Input Spill Kit</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kilos_plant_replica__c</fullName>
        <label>Kilos plant replica</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kilos_will_plant__c</fullName>
        <label>Kilos will plant</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L_der_productor__c</fullName>
        <label>Líder productor</label>
        <picklist>
            <picklistValues>
                <fullName>Ezequiel Durango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wilbert Alejandro Gómez O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alejandro Alirio Morales Charrasquiel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fernando Martínez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olga Nelly Pareja Gómez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nolasco Mazo Correa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luis Arjiro Piedrahita Quinceno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>William Ramos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jose Ignacio Velasquez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jerson Dario Orrego Garcia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claudia Andrea Sierra Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Vega Zapata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Arteaga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darwin Lucas Flores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marlon Javier Camaño Ortega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cristina Pavas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwin Alejandro Alzate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfredo Parra Giraldo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fredy Vanegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andres Vanegas Álvarez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Labor_Registration__c</fullName>
        <label>Labor Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Productor__c</fullName>
        <label>Nombre del Productor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_plots__c</fullName>
        <label>Number of plots</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Destination_Sold_Product__c</fullName>
        <label>Other Destination Sold Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Use_of_Resources__c</fullName>
        <label>Other Use of Resources</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_compliance_Agrochemicals__c</fullName>
        <formula>IF(( Criteria_accomplisment_Agrochemical__c / (if(isnull(text( Personal_Protection_Equipment__c )),0,1)+if(isnull( text( Input_Spill_Kit__c  )),0,1)+if(isnull( text( Dose_Area_Marked__c)),0,1)+if(isnull( text( Empty_Containers_Properly_Disposed__c )),0,1)+if(isnull( text( Agri_Input_ICA_Certified__c)),0,1)))&gt;=0,Criteria_accomplisment_Agrochemical__c / (if(isnull(text( Personal_Protection_Equipment__c )),0,1)+if(isnull( text( Input_Spill_Kit__c  )),0,1)+if(isnull( text( Dose_Area_Marked__c)),0,1)+if(isnull( text( Empty_Containers_Properly_Disposed__c )),0,1)+if(isnull( text( Agri_Input_ICA_Certified__c)),0,1)),null)</formula>
        <label>Percentage of compliance Agrochemicals</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_compliance_Facilities__c</fullName>
        <formula>IF((  Criteria_accomplishment_Facilities__c  / (if(isnull(text(  Agri_Input_Storage__c )),0,1)+if(isnull( text(  Agri_Input_Area_Locked__c )),0,1)+if(isnull( text(  Pesticide_Separated_From_Fertilizers__c )),0,1)+if(isnull( text(  First_Aid_Kit__c )),0,1)+if(isnull( text(  Fire_Extinguisher_Visible__c )),0,1)))&gt;=0,Criteria_accomplishment_Facilities__c  / (if(isnull(text(  Agri_Input_Storage__c )),0,1)+if(isnull( text(  Agri_Input_Area_Locked__c )),0,1)+if(isnull( text(  Pesticide_Separated_From_Fertilizers__c )),0,1)+if(isnull( text(  First_Aid_Kit__c )),0,1)+if(isnull( text(  Fire_Extinguisher_Visible__c )),0,1)),null)</formula>
        <label>Percentage of compliance Facilities</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_compliance_Register__c</fullName>
        <formula>IF((Criteria_accomplishment_Register__c/ (if(isnull(text(Labor_Registration__c)),0,1)+if(isnull( text(Fertilizers_Use_Registration__c )),0,1)+if(isnull( text(Pesticide_Use_Registration__c )),0,1)+if(isnull( text(Harvest_Registration__c )),0,1)+if(isnull( text(Commercialization_Registration__c)),0,1)))&gt;=0,Criteria_accomplishment_Register__c/ (if(isnull(text(Labor_Registration__c)),0,1)+if(isnull( text(Fertilizers_Use_Registration__c )),0,1)+if(isnull( text(Pesticide_Use_Registration__c )),0,1)+if(isnull( text(Harvest_Registration__c )),0,1)+if(isnull( text(Commercialization_Registration__c)),0,1)),null)</formula>
        <label>Percentage of compliance Register</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_compliance_Soil_and_Water__c</fullName>
        <formula>IF((  Criteria_accomplishment_Soil_and_Water__c  / (if(isnull(text(  Existing_Soil_Analysis__c )),0,1)+if(isnull( text(  Soil_Analysis_Interpreted_for_Fert_Plan__c )),0,1)+if(isnull( text(  Soil_Conservancy_Practices__c )),0,1)+if(isnull( text( Water_Quality_Evaluated__c )),0,1)))&gt;=0,Criteria_accomplishment_Soil_and_Water__c  / (if(isnull(text(  Existing_Soil_Analysis__c )),0,1)+if(isnull( text(  Soil_Analysis_Interpreted_for_Fert_Plan__c )),0,1)+if(isnull( text(  Soil_Conservancy_Practices__c )),0,1)+if(isnull( text( Water_Quality_Evaluated__c )),0,1)),null)</formula>
        <label>Percentage of compliance Soil and Water</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Protection_Equipment__c</fullName>
        <label>Personal Protection Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pesticide_Separated_From_Fertilizers__c</fullName>
        <label>Pesticide Separated From Fertilizers</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pesticide_Use_Registration__c</fullName>
        <label>Pesticide Use Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Photo_visit__c</fullName>
        <label>Photo visit</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price_Kg__c</fullName>
        <label>Price Kg</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_Kg_to_date__c</fullName>
        <label>Price per Kg to date</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Commercialized__c</fullName>
        <label>Production Commercialized</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Kg__c</fullName>
        <label>Production Kg</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_to_date_Kg__c</fullName>
        <label>Production to date (Kg)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productive_sector__c</fullName>
        <label>Productive sector</label>
        <picklist>
            <picklistValues>
                <fullName>Fríjol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Org_Resources__c</fullName>
        <label>Requires Org. Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Row_spacing_cm__c</fullName>
        <label>Row spacing cm</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soil_Analysis_Interpreted_for_Fert_Plan__c</fullName>
        <label>Soil Analysis Interpreted for Fert. Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soil_Conservancy_Practices__c</fullName>
        <label>Soil Conservancy Practices</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surveyor_Signature__c</fullName>
        <label>Surveyor Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_of_Resources__c</fullName>
        <label>Use of Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Compra de semillas o plántulas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra de abonos, enmiendas y fertilizantes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra de productos fitosanitarios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra de elementos para el tutorado (Solo aplica para frijol y tomate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraestructura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Number__c</fullName>
        <label>Visit Number</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Water_Quality_Evaluated__c</fullName>
        <label>Water Quality Evaluated</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>plant_spacing_cm__c</fullName>
        <label>plant spacing cm</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>submissionIBT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Farm Follow Ups</relationshipLabel>
        <relationshipName>EMP_Farm_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EMP Farm Follow Up</label>
    <nameField>
        <label>EMP  Name Follow Up</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMP Farm Follow Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>